--- a/web/src/main/resources/css/app.css
+++ b/web/src/main/resources/css/app.css
@@ -1,3 +1,9 @@
 body {
     background-color: #fff;
 }
+
+.background {
+    background-position: top center;
+    background-image: url("./../images/background.jpeg");
+    background-repeat: repeat-x;
+}
